Fix Regex Pattern for Password field + Add more Tests
Fix the Regex Pattern for the Password field in createAccount.html
Add Tests for Password Pattern Validation
Add Tests for Email Pattern Validation

--- a/src/main/resources/templates/login/createAccount.html
+++ b/src/main/resources/templates/login/createAccount.html
@@ -25,10 +25,9 @@
                        pattern="^[A-Za-z][A-Za-z0-9_-]{2,29}$"
                        required><br>
                 <i class="fa fa-shield" aria-hidden="true"></i>
-                <!--Pattern is not being applied -->
                 <input type="password" id="password" name="password"
                        placeholder="password" maxlength="60"
-                       pattern="^(?!.* )(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[|!$%&\/\(\)\?\^\'\\\+\-\*]).{8,}$"
+                       pattern="^(?!.* )(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!$%&\?\^\+\-\*#@]).{6,}$"
                        required><br>
                 <button type="submit">Create Account</button>
             </form>
