Add basic product screen template and family tree screen
Add a basic product screen template, with the container layout and a navbar.
Add an implementation of it, aka the Family Tree product screen.

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -1,5 +1,12 @@
 /* Styling code shared across all screens  */
 
+body, html
+{
+    background-color: white;
+    color: black;
+    margin: 0;
+}
+
 a
 {   /* Remove hyper-link decoration */
     color: black;
