--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Family Tree</title>
+    <title>Product Template</title>
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/products.css}" rel="stylesheet">
 </head>
@@ -39,10 +39,12 @@
                     Proin
                     enim sapien, mollis sed ligula a, suscipit convallis risus. Integer ullamcorper convallis enim
                     scelerisque sollicitudin.
-                    Watashi wa Family Tree
                 </p>
             </div>
         </div>
+        <!--    For extra content, simply add a new container and it's content here
+                The product will span 100% of the main view and subsequent containers will be below it,
+                 forcing you to scroll down -->
     </div>
 </section>
 </body>
