--- a/src/main/resources/static/styles/products.css
+++ b/src/main/resources/static/styles/products.css
@@ -2,12 +2,51 @@
 
 html, body
 {
-    /* Page Background */
-    background-color: white;
-
     /* document-wide styling */
     align-items: center;
     height: 100%;
-    margin: 0;
-    color: black;
+}
+
+#navBar
+{
+    width: 100%;
+    height: 5vh;
+    align-content: center;
+
+    overflow: hidden; /* Don't show items that don't fit in the navbar and show under/above it */
+}
+
+#navBar a
+{
+    float: right;
+    text-align: center;
+    vertical-align: middle;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+#navBar-left
+{
+    float: left;
+}
+
+#navBar .icon
+{
+    width: 2vh;
+    height: 2vh;
+    vertical-align: middle;
+}
+
+#productContainer
+{
+    /* Align the content in the center of the page horizontally and vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 95vh; /* Account for the navbar height */
+}
+#product
+{
+    padding: 10vh;
 }
