Add 'Share Tech' font as the default font
Add a 'Share Tech' font from Google Fonts to the products screens and as a default font

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -3,17 +3,22 @@
 body, html
 {
     background-color: white;
+    font-family: Share Tech, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 27px;
     color: black;
     margin: 0;
 }
 
 a
-{   /* Remove hyper-link decoration */
+{ /* Remove hyper-link decoration */
     color: black;
     text-decoration: none;
 }
 
 :focus
-{   /* remove an outline on focusing of an element */
+{ /* remove an outline on focusing of an element */
     outline: none;
 }
