--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -5,6 +5,7 @@
     <title>Product Template</title>
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/products.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
 </head>
 <body>
 <section id="navigationContainer">
