--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -18,11 +18,13 @@
             <a href="/index"><img th:src="@{~/img/icons/logoIcon.png}" alt="treecreate" id="treecreateLogo"
                                   class="icon"></a>
         </div>
-        <a href="/login">Login</a>
-        <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.png}" alt="basket"
-                                       id="shoppingBasketIcon" class="icon"> (0) Items</a>
-        <a href="/aboutUs">About Us</a>
-        <a href="/specialRequest">Special Request</a>
+        <div id="navbar-right">
+            <a href="/login">Login</a>
+            <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.png}" alt="basket"
+                                           id="shoppingBasketIcon" class="icon"> (0) Items</a>
+            <a href="/aboutUs">About Us</a>
+            <a href="/specialRequest">Special Request</a>
+        </div>
     </nav>
 </section>
 <section id="contentContainer">
