Add Support for multiple Boxes
Add 2 more boxes in familyTree.html
Add support for dragging multiple boxes.

--- a/src/main/resources/static/styles/familyTree.css
+++ b/src/main/resources/static/styles/familyTree.css
@@ -1,4 +1,4 @@
-#draggableBox
+.draggableBox
 {
     display: flex;
     justify-content: center;
@@ -11,7 +11,7 @@
     width: 500px;
 }
 
-#draggableBox input
+.draggableBox input
 {
 
 }
