--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -35,7 +35,15 @@
             <div id="product">
                 <!-- Draggable Box -->
                 <div id="draggableBoxContainer">
-                    <div id="draggableBox">
+                    <div class="draggableBox">
+                        <input type="text" default="Bob">
+                    </div>
+
+                    <div class="draggableBox">
+                        <input type="text" default="Bob">
+                    </div>
+
+                    <div class="draggableBox">
                         <input type="text" default="Bob">
                     </div>
                 </div>
