Add Ability to Create Box on Click, Box Amount Limit, Delete Button
Add the ability to create new boxes in a predetermined location by clicking on the screen
Add delete button for each box
Add limit ( max: 25 ) for the amount of boxes that can be created
Add icon for delete button

--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -35,16 +35,14 @@
             <div id="product">
                 <!-- Draggable Box -->
                 <div id="draggableBoxContainer">
-                    <div class="draggableBox">
-                        <input type="text" default="Bob">
-                    </div>
-
-                    <div class="draggableBox">
-                        <input type="text" default="Bob">
-                    </div>
-
-                    <div class="draggableBox">
-                        <input type="text" default="Bob">
+                    <div id = "draggableBoxSpawnzone">
+                        <div class="draggableBox">
+                            <input type="text">
+                            <button class="deleteDraggableBoxButton" onclick="deleteBox(this)">
+                                <img th:src="@{~/img/icons/deleteDraggableBoxIcon.png}" alt="delete box"
+                                     class="deleteDraggableBoxIcon icon">
+                            </button>
+                        </div>
                     </div>
                 </div>
 
