--- a/src/main/resources/static/styles/familyTree.css
+++ b/src/main/resources/static/styles/familyTree.css
@@ -1,17 +1,34 @@
+#draggableBoxContainer
+{
+
+}
+
+#draggableBoxSpawnzone
+{
+
+}
+
 .draggableBox
 {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: absolute;
     z-index: 100;
     background-color: #f1f1f1;
     border: 1px solid #d3d3d3;
-    height: 250px;
-    width: 500px;
+    height: 0px;
+    width: 0px;
 }
 
 .draggableBox input
 {
 
+}
+
+.draggableBox .icon
+{
+    width: 4vh;
+    height: 4vh;
+    vertical-align: middle;
 }
