--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -11,19 +11,21 @@
 <section id="navigationContainer">
     <nav id="navBar">
         <div id="navBar-left">
-            <a href="/facebook"><img th:src="@{~/img/icons/facebookIcon.png}" alt="facebook" id="facebookIcon"
-                                     class="icon"></a>
-            <a href="/instagram"><img th:src="@{~/img/icons/instagramIcon.png}" alt="instagram" id="instagramIcon"
-                                      class="icon"></a>
-            <a href="/index"><img th:src="@{~/img/icons/logoIcon.png}" alt="treecreate" id="treecreateLogo"
-                                  class="icon"></a>
+            <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}" alt="treecreate" id="treecreateLogo"
+                                  class="icon" style="width: 14vh;"></a>
+            <a href="/facebook" target="popup"
+               onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
+                <img th:src="@{~/img/logos/facebookBlackIcon.svg}" alt="facebook" id="facebookIcon" class="icon"></a>
+            <a href="https://www.instagram.com/tree_create/" target="popup"
+               onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
+                <img th:src="@{~/img/logos/instagramBlackIcon.svg}" alt="instagram" id="instagramIcon" class="icon"></a>
         </div>
-        <div id="navbar-right">
-            <a href="/login">Login</a>
-            <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.png}" alt="basket"
+        <div id="navBar-right">
+            <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
                                            id="shoppingBasketIcon" class="icon"> (0) Items</a>
             <a href="/aboutUs">About Us</a>
             <a href="/specialRequest">Special Request</a>
+            <a href="/login">Login</a>
         </div>
     </nav>
 </section>
