--- a/src/main/resources/static/styles/familyTree.css
+++ b/src/main/resources/static/styles/familyTree.css
@@ -1,11 +1,9 @@
 #draggableBoxContainer
 {
-
-}
-
-#draggableBoxSpawnzone
-{
-
+    position: absolute;
+    width: 100%;
+    height: 94vh;
+    z-index: 99;
 }
 
 .draggableBox
@@ -17,8 +15,8 @@
     z-index: 100;
     background-color: #f1f1f1;
     border: 1px solid #d3d3d3;
-    height: 0px;
-    width: 0px;
+    height: 0;
+    width: 0;
 }
 
 .draggableBox input
