--- a/src/main/resources/templates/home/aboutUs.html
+++ b/src/main/resources/templates/home/aboutUs.html
@@ -170,7 +170,7 @@
             </div>
             <div class="footer-row">
                 <div class="section">
-                    ------------------------------------------------------------------------------------------
+                    <hr id="footer-separator">
                 </div>
             </div>
             <div class="footer-row" id="footer-bottom">
