Replace footer info with proper information
Also, remove the personal info just in case...

--- a/src/main/resources/templates/home/aboutUs.html
+++ b/src/main/resources/templates/home/aboutUs.html
@@ -146,9 +146,7 @@
                 <div class="section">
                     <span class="title">Contact</span><br>
                     <p>
-                        Email: REDACTED<br>
-                        Phone: +45 REDACTED<br>
-                        REDACTED GUY
+                        Email: info@treecreate.net
                     </p>
                 </div>
                 <div class="section">
@@ -163,9 +161,7 @@
                 <div class="section">
                     <span class="title">Address</span><br>
                     Denmark<br>
-                    Copenhagen<br>
-                    REDACTED 69<br>
-                    2200
+                    Copenhagen
                 </div>
             </div>
             <div class="footer-row">
@@ -175,7 +171,7 @@
             </div>
             <div class="footer-row" id="footer-bottom">
                 <div class="section">
-                    text stuff, copyright and all. 2020-2020
+                    Copyright © 2020 TreeCreate All Rights Reserved.
                 </div>
             </div>
         </nav>
