--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -6,15 +6,33 @@
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/landingPage.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta">
 </head>
 <body>
 <section id="pageContainer">
     <section id="contentContainer">
         <div id="content">
+            <div id="newsletterContainer">
+                <div id="newsletter">
+                    <div id="logo">
+                        <img th:src="@{~/img/logos/treecreateLogo/TCFullWhiteLogo.png}" alt="Treecreate Logo"
+                             id="treecreateLogo">
+                    </div>
+                    <span id="comingSoon">Coming Soon</span>
+                    <br>
+                    <span id="subscribe">Subscribe for starting offers</span>
+                    <div id="emailContainer">
+                        <form action="/submitNewsletterEmail">
+                            <input type="email" id="emailInput" placeholder=" Your email...">
+                            <button id="emailSubmitBtn" type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title">About US</span><br><br>
+                        <span class="title">About US</span><br><br><br><br><br><br>
                         <span class="subTitle">Product</span><br>
                         <p>
                             Unique wood design. You get to pick the design and then create your own tree with the names
@@ -57,35 +75,38 @@
                     </section>
                     <section id="reviews">
                         <div class="review">
-                            <img th:src="@{~/img/images/treeDesign/design1.svg}" alt="Tree Design" class="image">
+                            <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
+                                 class="image">
                             <div class="text">
-                                <span class="title">Cristian Valentin</span>
-                                <p>
+                                <span class="title">Cristian Valentin</span><br>
+                                <span>
                                     “I love the tree! It is some great quality wood and the design is cut with such
                                     detail
                                     its amazing!”
-                                </p>
+                                </span>
                             </div>
                         </div>
                         <div class="review">
-                            <img th:src="@{~/img/images/treeDesign/design1.svg}" alt="Tree Design" class="image">
+                            <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
+                                 class="image">
                             <div class="text">
-                                <span class="title">Anna Krag-Sørensen</span>
-                                <p>
+                                <span class="title">Anna Krag-Sørensen</span><br>
+                                <span>
                                     “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
                                     se
                                     ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
-                                </p>
+                                </span>
                             </div>
                         </div>
                         <div class="review">
-                            <img th:src="@{~/img/images/treeDesign/design1.svg}" alt="Tree Design" class="image">
+                            <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
+                                 class="image">
                             <div class="text">
-                                <span class="title">Laura Faurholt</span>
-                                <p>
+                                <span class="title">Laura Faurholt</span><br>
+                                <span>
                                     “Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig
                                     smukt.”
-                                </p>
+                                </span>
                             </div>
                         </div>
                     </section>
