Add functionality for submitting an email for newsletter
ToDo - refactor
I am hungry
Added the sql scripts for the newsletter
Database works for it too
GG ez

--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -22,8 +22,9 @@
                     <br>
                     <span id="subscribe">Subscribe for starting offers</span>
                     <div id="emailContainer">
-                        <form action="/submitNewsletterEmail">
-                            <input type="email" id="emailInput" placeholder=" Your email...">
+                        <form action="/submitNewsletterEmail" method="POST">
+                            <input type="email" id="emailInput" name="newsletterEmail" placeholder=" Your email..."
+                                   required>
                             <button id="emailSubmitBtn" type="submit">Submit</button>
                         </form>
                     </div>
