--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -38,6 +38,7 @@
                 <img th:src="@{~/img/icons/deleteDraggableBoxIcon.png}" alt="delete box"
                      class="deleteDraggableBoxIcon icon">
             </button>
+            <button class="dragDraggableBoxButton"></button>
         </div>
     </div>
 
