--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -33,7 +33,7 @@
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title">About US</span><br><br><br><br><br><br>
+                        <span class="title">About US</span><br>
                         <span class="subTitle">Product</span><br>
                         <p>
                             Unique wood design. You get to pick the design and then create your own tree with the names
@@ -79,35 +79,35 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title">Cristian Valentin</span><br>
-                                <span>
+                                <p class="title">Cristian Valentin</p>
+                                <p>
                                     “I love the tree! It is some great quality wood and the design is cut with such
                                     detail
                                     its amazing!”
-                                </span>
+                                </p>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title">Anna Krag-Sørensen</span><br>
-                                <span>
+                                <p class="title">Anna Krag-Sørensen</p>
+                                <p>
                                     “Det er SÅ flot. Jeg er vildt glad for mit familie træet og hvordan det kom til at
                                     se
                                     ud. Har det stående midt i stuen og bliver så glad af at se det hver morgen.”
-                                </span>
+                                </p>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title">Laura Faurholt</span><br>
-                                <span>
+                                <p class="title">Laura Faurholt</p>
+                                <p>
                                     “Jeg har købt det til mine forældres guldbryllup og de elskede det! Det er virkelig
                                     smukt.”
-                                </span>
+                                </p>
                             </div>
                         </div>
                     </section>
