--- a/src/main/resources/static/styles/landingPage.css
+++ b/src/main/resources/static/styles/landingPage.css
@@ -78,7 +78,7 @@ html, body
 
 #content
 {
-    margin: 5vh 15vw;
+    margin: 0 15vw;
     width: 70vw;
     font-size: 2.4vw;
     text-align: center;
@@ -288,7 +288,8 @@ body, html
 
 #footerContainer
 {
-    height: 30vh;
+    height: fit-content;
+    margin-top: 1vh;
 }
 
 /* Newsletter thing */
@@ -339,7 +340,9 @@ body, html
     border-radius: 5px;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.7);
     height: 4vh;
-    width: 20vw;
+    min-width: 20vw;
+    max-width: 30vw;
+    width: 100%;
     margin-right: 1vw;
 }
 
