--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Treecreate</title>
     <link th:href="@{/styles/index.css}" rel="stylesheet">
+    <link th:href="@{/styles/landingPagePopup.css}" rel="stylesheet">
     <link th:href="@{/styles/landingPage.css}" rel="stylesheet">
+    <script th:src="@{/js/landingPage.js}"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Simonetta">
 </head>
@@ -25,8 +27,12 @@
                         <form action="/submitNewsletterEmail" method="POST">
                             <input type="email" id="emailInput" name="newsletterEmail" placeholder=" Your email..."
                                    required>
-                            <button id="emailSubmitBtn" type="submit">Submit</button>
+                            <button id="emailSubmitBtn" type="submit"
+                                    class="popup" onclick="submitPopup()">Submit
+                                <span class="popupText" id="landingPagePopup">Thanks for subscribing ! :D</span>
+                            </button>
                         </form>
+
                     </div>
                 </div>
             </div>
