Add Random Background to Boxes
Add Random Background Image for each Box created

--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -35,7 +35,7 @@
     <!-- Draggable Box -->
     <div id="draggableBoxContainer">
         <div class="draggableBox">
-            <input type="text">
+            <input type="text" required>
             <button class="deleteDraggableBoxButton" onclick="deleteBox(this)">
                 <img th:src="@{~/img/icons/deleteDraggableBoxIcon.png}" alt="delete box"
                      class="deleteDraggableBoxIcon icon">
